--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>grospote</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="antoinelassagne@gmail.com">braoutch</maintainer>
+  <maintainer email="brian.deegan82@gmail.com">briandeegan82</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
